test/bad/classes/default01.px

class A def
    Int x

default(A)
